--- a/index.ipynb
+++ b/index.ipynb
@@ -79,8 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create database connection here\n",
-    "cursor.execute('''SELECT name FROM cats;''').fetchall()"
+    "# create database connection here\n"
    ]
   },
   {
